# mlx-metal-kernels

./: .codex_agent_prompt_result.txt  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: autotune.py  backend_registry.py  bench_attention.py  bench_decode_attention.py  bench_decode_block.py  bench_decode_loop.py  bench_dequant.py  bench_fused_mlp_kernels.py  bench_fused_qkv_rope_cache.py  bench_gqa_attention.py  bench_gqa_decode_attention.py  bench_gqa_decode_block.py  bench_kv_cache_update.py  bench_kv_offload_tier.py  bench_kv_prefetch_scheduler.py  bench_llama_layer_decode.py  bench_llama_prefill_stack.py  bench_llama_stack_decode.py  bench_long_context_runtime.py  bench_paged_decode_attention.py  bench_paged_decode_block.py  bench_paged_decode_loop.py  bench_paged_kv_cache_update.py  bench_paged_quantized_kv_decode.py  bench_parallel_speculative_verify.py  bench_prefix_cache_reuse.py  bench_qkv_split.py  bench_quant_matvec_decode.py  bench_quant_matvec_parallel.py  bench_quant_matvec_tiled.py  bench_quantized_decode_block.py  bench_quantized_kv_decode_attention.py  bench_quantized_mlp_block.py  bench_residual_norm.py  bench_rms_norm.py  bench_rope.py  bench_simdgroup_attention.py  bench_sparse_attention.py  bench_sparse_decode_attention.py  bench_specialized_decode_attention.py  (+11 more)
docs/: async_kv_prefetch_scheduler.md  autotuning.md  benchmarking.md  checkpoint_converter.md  checkpoint_layout_loader.md  checkpoint_manifest_format.md  checkpoint_to_quantized_packaging.md  decode_attention.md  design.md  flash_kv_offload_tier.md  full_tiny_generation_demo.md  fused_decode_block.md  fused_decode_path.md  fused_quantized_mlp.md  gqa_mqa_support.md  gqa_prefill_attention.md  index.html  kv_cache.md  layout_kernels.md  llama_layer_decode_experiment.md  llama_weight_mapping.md  local_real_model_smoke_test.md  long_context_runtime_integration.md  multi_layer_decode_stack.md  optimized_prefill_stack.md  paged_kv_cache.md  paged_quantized_kv_cache.md  parallel_speculative_verification.md  (+24 more)
(+269 files in other folders)
