[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-flash-attention-metal"
version = "0.1.0"
description = "Apple Silicon MLX/Metal kernel lab for LLM inference: attention, KV-cache, q4/q8 matvec, decode blocks, toy transformer layers, and autotuning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mlx"]

[tool.setuptools]
packages = ["ops"]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]
