[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-flash-attention-metal"
version = "0.1.0"
description = "Apple Silicon MLX/Metal custom kernels for LLM inference on Apple Silicon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Manish KL", email = "manishkl@users.noreply.github.com" },
]
dependencies = ["mlx", "numpy"]

[project.urls]
Repository = "https://github.com/manishklach/mlx-metal-kernels"
Issues = "https://github.com/manishklach/mlx-metal-kernels/issues"
Documentation = "https://github.com/manishklach/mlx-metal-kernels"

[tool.setuptools]
packages = ["ops", "models"]
include-package-data = true
license-files = ["LICENSE"]

[tool.pytest.ini_options]
pythonpath = ["."]
